keith-ball-algo/errorFile212-03-2021-12-27-33-1615552053554--1476971213.txt
  File "/Users/student/Desktop/TermialGame/C1GamesStarterKit/keith-ball-algo/algo_strategy.py", line 555
    for(y in range(14)):
                       ^
SyntaxError: invalid syntax
